--- a/infrastructure/views/layouts/main.gohtml
+++ b/infrastructure/views/layouts/main.gohtml
@@ -18,7 +18,7 @@
     <meta name="msapplication-TileColor" content="#7cd1cd">
     <title>Theta: Personal GPT {{.Title}}</title>
 </head>
-  <body class="bg-white font-sans leading-normal tracking-normal flex flex-col min-h-screen" hx-boost="true">
+  <body class="bg-gray-800 text-gray-300 font-sans leading-normal tracking-normal flex flex-col min-h-screen" hx-boost="true">
     {{embed}}
   </body>
 </html>
