--- a/infrastructure/views/components/message.gohtml
+++ b/infrastructure/views/components/message.gohtml
@@ -1,6 +1,8 @@
 <div hx-swap-oob="beforeend:#content">
     <div class="text-left">
-        <div class="font-semibold select-none">{{.Author}}</div>
-        <div class="inline-block bg-gray-600 text-white p-2 rounded-lg">{{.Text}}</div>
+        <div class="font-semibold select-none pt-4">{{.Author}}</div>
+        <div class="inline-block text-white p-2" id={{.MessageId}}>
+            {{.Text}}
+        </div>
     </div>
 </div>
