--- a/infrastructure/views/layouts/main.gohtml
+++ b/infrastructure/views/layouts/main.gohtml
@@ -9,6 +9,9 @@
     <script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
     <script src="https://unpkg.com/htmx.org/dist/ext/morphdom-swap.js"></script>
     <script src="//unpkg.com/alpinejs" defer></script>
+    <script src="https://unpkg.com/marked@0.3.6"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <!--<link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon-180x180.png">
     <link rel="shortcut icon" type="image/x-icon" href="/static/favicon-32x32.ico">
     <link rel="icon" type="image/png" sizes="96x96" href="/static/favicon-96x96.png">
