feat: added a scrolling effect when receiving new messages

--- a/infrastructure/views/chat.gohtml
+++ b/infrastructure/views/chat.gohtml
@@ -46,7 +46,10 @@
     });
 
     htmx.on("htmx:wsAfterMessage", function (evt) {
-        const content = document.getElementById("content");
+        const elt = document.getElementById("user-message");
+        if (elt.getBoundingClientRect().bottom + 20 > window.innerHeight) {
+            window.scrollTo({ top: elt.getBoundingClientRect().bottom + window.scrollY + 20, behavior: 'smooth' });
+        }
     });
 
     document.addEventListener("DOMContentLoaded", () => {
