--- a/infrastructure/views/chat.gohtml
+++ b/infrastructure/views/chat.gohtml
@@ -1,25 +1,30 @@
 <div
     class="container mx-auto p-4 max-w-4xl text-lg flex flex-col h-screen"
     hx-ext="ws"
-    ws-connect="/ws/chat"
+    ws-connect="/ws/chat/{{.ConversationId}}"
     id="chat-socket"
+    x-data="{}"
 >
     <div id="content" class="flex-grow">
         <!-- Chat messages will be displayed here -->
+        {{ range.Messages }}
+        {{ . }}
+        {{ end }}
     </div>
 
-    <!-- prevent adding a newline when pressing enter by x-data and x-on -->
+    <!-- prevent adding a newline when pressing enter by x-data and x-on. note that we also trigger by load but catch empty
+    prompts in the backend part -->
     <textarea
         ws-send
-        x-data="{}"
         x-on:keydown.enter.prevent
-        hx-trigger="keydown[keyCode==13] from:body"
+        hx-trigger="load, keydown[keyCode==13] from:body"
         name="message"
         id="user-message"
         class="w-full display-block leading-8 p-4 mt-4 rounded-xl white bg-gray-900 border border-gray-700"
         placeholder="Message GPT..."
         style="min-height: 4rem"
-    ></textarea>
+        >{{.UserMessage}}</textarea
+    >
 
     <div class="text-sm pt-4 text-gray-500">
         Don't blindly trust the LLM. Use at your own risk. We don't secure you
@@ -31,8 +36,6 @@
 </div>
 
 <script>
-    const messages = [];
-
     htmx.on("htmx:wsAfterSend", function (evt) {
         const textarea = document.getElementById("user-message");
         textarea.value = "";
