--- a/infrastructure/views/new_chat.gohtml
+++ b/infrastructure/views/new_chat.gohtml
@@ -21,9 +21,17 @@
 
         <!-- prevent adding a newline when pressing enter by x-data and x-on -->
         <textarea
+            x-data="{ 
+                resize () { 
+                    $el.style.height = '0px'; 
+                    $el.style.height = $el.scrollHeight + 'px' 
+                } 
+            }"
+            x-init="resize()"
+            @input="resize()"
             name="message"
             id="user-message"
-            class="w-full display-block leading-8 p-4 mt-4 rounded-xl white bg-gray-900 border border-gray-700"
+            class="w-full display-block leading-8 p-4 mt-4 rounded-xl white bg-gray-900 border border-gray-700 resize-none overflow-hidden"
             placeholder="Message GPT..."
             style="min-height: 4rem"
         ></textarea>
